В colors добавлены дополнительные цвета В dimens добавлены размеры В string добавлена одна строка В styles добавлены стили для разметки

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">DevIntensive</string>
+    <string name="app_name">Островерхов Кирилл</string>
+    <string name="phone_name">Мобильный телефон</string>
 </resources>
