--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,14 @@
 <resources>
     <string name="app_name">Островерхов Кирилл</string>
-    <string name="phone_name">Мобильный телефон</string>
+    <string name="phone_title">Мобильный телефон</string>
+    <string name="phone">+7913208****</string>
+    <string name="email_title">E-mail</string>
+    <string name="email">ridorix@yandex.ru</string>
+    <string name="vk_title">Вконтакте</string>
+    <string name="vk_link">vk.com/ridorix</string>
+    <string name="git_title">Репозиторий</string>
+    <string name="git_link">github.com/Ridorix/DevIntensive</string>
+    <string name="about_title">О себе</string>
+    <string name="about">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
+
 </resources>
